[package]
name = "aarhus-youth-housing-reapply"
version = "0.1.0"
authors = ["anderskloborg <anderskloborg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.7", features = ["cookies"] }
select = "0.5.0"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4.0"